--- a/crm/accounts/templates/accounts/products.html
+++ b/crm/accounts/templates/accounts/products.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Products</h1>
-</body>
-</html>
+{% extends 'accounts/main.html' %}
+{% block content %}
+<br>
+<div class="row">
+    <div class="col-md">
+        <div class="card card-body">
+            <h5>Products</h5>
+        </div>
+        <div class="card-body">
+            <table class="table">
+                <tr>
+                    <th>Products</th>
+                    <th>Cateory</th>
+                    <th>Price</th>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+{% endblock %}
