--- a/crm/accounts/templates/accounts/main.html
+++ b/crm/accounts/templates/accounts/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,25 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        #logo{
-            }
-
-body{
-    background-color: #ebeff5;
-}
-
-#total-orders{
-    background-color: #4cb4c7;
-}
-
-#order-delivered{
-    background-color: #7abecc;
-}
-#order-pending{
-    background-color: #7CD1C0;
-}
-    </style>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 </head>
 <body>
     {% include 'accounts/navbar.html' %}
