--- a/crm/accounts/templates/accounts/products.html
+++ b/crm/accounts/templates/accounts/products.html
@@ -13,6 +13,13 @@
                     <th>Cateory</th>
                     <th>Price</th>
                 </tr>
+                {% for i in products %}
+                    <tr>
+                        <td>{{i.name}}</td>
+                        <td>{{i.price}}</td>
+                        <td>{{i.category}}</td>
+                    </tr>
+                {% endfor %}
             </table>
         </div>
     </div>
