--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -35,6 +35,7 @@
     <div class="col">
         <div class="card card-body">
             <form action="" method="get">
+                {{myFilter.form}}
                 <button class="btn btn-primary" type="submit">Search</button>
             </form>
         </div>
@@ -49,7 +50,7 @@
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
-                    <th>Category</th>
+                    <th>Note</th>
                     <th>Date Ordered</th>
                     <th>Status</th>
                     <th>Update</th>
@@ -58,7 +59,7 @@
                 {% for order in orders %}
                     <tr>
                         <td>{{order.product}}</td>
-                        <td>{{order.product_category}}</td>
+                        <td>{{order.note}}</td>
                         <td>{{order.date_created}}</td>
                         <td>{{order.status}}</td>
                         <td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
