--- a/crm/accounts/templates/accounts/order_form.html
+++ b/crm/accounts/templates/accounts/order_form.html
@@ -4,11 +4,11 @@
 
 <form action="" method="post">
     {% csrf_token %}
-    {{ formset.management_form }}
-    {% for form in formset %}
+    <!-- {{ formset.management_form }}
+    {% for form in formset %} -->
         {{form}}
-        <hr>
-    {% endfor %}
+        <!-- <hr>
+    {% endfor %} -->
     <input type="submit" name="submit">
 </form>
 
